_sass/custom.scss
/*- Custom style -*/

// -- Put custom style under this point -- //
@import 'experience';

.home {
  display: -webkit-flex;
  display:    -moz-flex;
  display:     -ms-flex;
  display:      -o-flex;
  display:         flex;
  border-bottom: 1px solid rgba(0,0,0,0.14);
}

.home__text {
  width: 70%;
}

.home__portrait {
  align-self: flex-end;
}

@media (max-width: 700px) {
  .home {
    flex-direction: column;
  }
  .home__text {
    width: 100%;
  }

  .home__portrait {
    align-self: center;
  }
}

.home__portrait-photo {
  margin-bottom: 0;
}

.contact__social-link>img {
  width: 1.5rem;
  height: 1.5rem;
  display: inline-block;
}

